--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,17 +16,30 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 14
-    - name: Set env
-      run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-    - name: Create artifacts
+    - name: Clone Mindustry & Arc
       run: |
         git clone --depth=1 --branch=master https://github.com/Anuken/Arc
         git clone --depth=1 --branch=me-things https://github.com/Blockzilla101/Mindustry
-        cd Mindustry
+    - name: Set env
+      run: |
+        echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+        hashes=$(find ./Mindustry/core/assets-raw/sprites -type f | xargs sha256sum | sha256sum)
+        echo "spriteHashes=${hashes:0:(-3)}" >> $GITHUB_ENV
+    - name: Cache Generated Sprites
+      uses: actions/cache@v2
+      with:
+        path: |
+          ./Mindustry/core/assets/sprites
+          ./Mindustry/core/assets-raw/sprites_out  
+        key: sprites-${{ env.spriteHashes }}
+    - name: Create artifacts
+      run: |
+        cd ./Mindustry
         MindustryBE=$(curl --silent "https://api.github.com/repos/Anuken/MindustryBuilds/releases/latest" | grep -Po '"tag_name": "\K.*?(?=")')
         ./gradlew desktop:dist server:dist -PantigriefVersion=${RELEASE_VERSION} -Pbuildversion=${MindustryBE} -PversionType=bleeding-edge --stacktrace
         mv desktop/build/libs/Mindustry.jar desktop/build/libs/Mindustry-Antigrief-BE-Desktop-${RELEASE_VERSION}.jar
         mv server/build/libs/server-release.jar server/build/libs/Mindustry-Antigrief-BE-Server-${RELEASE_VERSION}.jar
+        cd ../
     - name: Upload desktop artifacts
       uses: svenstaro/upload-release-action@v2
       with:
