--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
       run: |
         cd ./Mindustry
         MindustryBE=$(curl --silent "https://api.github.com/repos/Anuken/MindustryBuilds/releases/latest" | grep -Po '"tag_name": "\K.*?(?=")')
-        ./gradlew desktop:dist server:dist -PantigriefVersion=${RELEASE_VERSION} -Pbuildversion=${MindustryBE} -PversionType=bleeding-edge --stacktrace
+        ./gradlew desktop:dist server:dist -PantigriefVersion=${RELEASE_VERSION} -Pbuildversion=${MindustryBE} -PversionType=bleeding-edge -PfastAA --stacktrace
         mv desktop/build/libs/Mindustry.jar desktop/build/libs/Mindustry-Antigrief-BE-Desktop-${RELEASE_VERSION}.jar
         mv server/build/libs/server-release.jar server/build/libs/Mindustry-Antigrief-BE-Server-${RELEASE_VERSION}.jar
         cd ../
